exports[`test Button renders correctly 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
      },
      undefined,
    ]
  }
  testID={undefined}>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#9E9E9E",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginLeft": 15,
          "marginRight": 15,
          "padding": 19,
        },
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        Object {
          "backgroundColor": "#0E4EF8",
        },
        Object {
          "borderRadius": 2,
        },
        Object {
          "shadowColor": "rgba(0,0,0, .4)",
          "shadowOffset": Object {
            "height": 1,
            "width": 1,
          },
          "shadowOpacity": 1,
          "shadowRadius": 1,
        },
        Object {
          "padding": 12,
        },
        Object {
          "marginLeft": 0,
          "marginRight": 0,
          "padding": 12,
        },
        undefined,
      ]
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": undefined,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          Array [
            Object {
              "color": "white",
              "fontSize": 20,
            },
            Object {
              "color": "#fff",
            },
            Object {
              "fontSize": 17.5,
            },
            Object {
              "fontSize": 14,
            },
            undefined,
            Object {
              "fontWeight": "bold",
            },
            Object {
              "fontFamily": "HelveticaNeue",
            },
          ],
        ]
      }>
      Coming Soon...
    </Text>
  </View>
</View>
`;

exports[`test Button with Icon renders correctly 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
      },
      undefined,
    ]
  }
  testID={undefined}>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#9E9E9E",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginLeft": 15,
          "marginRight": 15,
          "padding": 19,
        },
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        Object {
          "backgroundColor": "#0E4EF8",
        },
        Object {
          "borderRadius": 2,
        },
        Object {
          "shadowColor": "rgba(0,0,0, .4)",
          "shadowOffset": Object {
            "height": 1,
            "width": 1,
          },
          "shadowOpacity": 1,
          "shadowRadius": 1,
        },
        Object {
          "padding": 12,
        },
        Object {
          "marginLeft": 0,
          "marginRight": 0,
          "padding": 12,
        },
        undefined,
      ]
    }>
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "white",
            "fontSize": 14,
          },
          Array [
            Object {
              "marginRight": 10,
            },
            undefined,
          ],
          Object {
            "fontFamily": "Material Icons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
        ]
      }>
      
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": undefined,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          Array [
            Object {
              "color": "white",
              "fontSize": 20,
            },
            Object {
              "color": "#fff",
            },
            Object {
              "fontSize": 17.5,
            },
            Object {
              "fontSize": 14,
            },
            undefined,
            Object {
              "fontWeight": "bold",
            },
            Object {
              "fontFamily": "HelveticaNeue",
            },
          ],
        ]
      }>
      Coming Soon...
    </Text>
  </View>
</View>
`;

exports[`test Button with Text renders correctly 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
      },
      undefined,
    ]
  }
  testID={undefined}>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#9E9E9E",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginLeft": 15,
          "marginRight": 15,
          "padding": 19,
        },
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        Object {
          "backgroundColor": "#0E4EF8",
        },
        Object {
          "borderRadius": 2,
        },
        Object {
          "shadowColor": "rgba(0,0,0, .4)",
          "shadowOffset": Object {
            "height": 1,
            "width": 1,
          },
          "shadowOpacity": 1,
          "shadowRadius": 1,
        },
        Object {
          "padding": 12,
        },
        Object {
          "marginLeft": 0,
          "marginRight": 0,
          "padding": 12,
        },
        undefined,
      ]
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": undefined,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          Array [
            Object {
              "color": "white",
              "fontSize": 20,
            },
            Object {
              "color": "#fff",
            },
            Object {
              "fontSize": 17.5,
            },
            Object {
              "fontSize": 14,
            },
            undefined,
            Object {
              "fontWeight": "bold",
            },
            Object {
              "fontFamily": "HelveticaNeue",
            },
          ],
        ]
      }>
      Test Button
    </Text>
  </View>
</View>
`;

exports[`test Button with onPress renders correctly 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
      },
      undefined,
    ]
  }
  testID={undefined}>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#9E9E9E",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginLeft": 15,
          "marginRight": 15,
          "padding": 19,
        },
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        Object {
          "backgroundColor": "#0E4EF8",
        },
        Object {
          "borderRadius": 2,
        },
        Object {
          "shadowColor": "rgba(0,0,0, .4)",
          "shadowOffset": Object {
            "height": 1,
            "width": 1,
          },
          "shadowOpacity": 1,
          "shadowRadius": 1,
        },
        Object {
          "padding": 12,
        },
        Object {
          "marginLeft": 0,
          "marginRight": 0,
          "padding": 12,
        },
        undefined,
      ]
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": undefined,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          Array [
            Object {
              "color": "white",
              "fontSize": 20,
            },
            Object {
              "color": "#fff",
            },
            Object {
              "fontSize": 17.5,
            },
            Object {
              "fontSize": 14,
            },
            undefined,
            Object {
              "fontWeight": "bold",
            },
            Object {
              "fontFamily": "HelveticaNeue",
            },
          ],
        ]
      }>
      Coming Soon...
    </Text>
  </View>
</View>
`;

exports[`test Large Button renders correctly 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
      },
      undefined,
    ]
  }
  testID={undefined}>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#9E9E9E",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginLeft": 15,
          "marginRight": 15,
          "padding": 19,
        },
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        Object {
          "backgroundColor": "#0E4EF8",
        },
        Object {
          "borderRadius": 2,
        },
        Object {
          "shadowColor": "rgba(0,0,0, .4)",
          "shadowOffset": Object {
            "height": 1,
            "width": 1,
          },
          "shadowOpacity": 1,
          "shadowRadius": 1,
        },
        Object {
          "padding": 12,
        },
        Object {
          "marginLeft": 0,
          "marginRight": 0,
          "padding": 8,
        },
        undefined,
      ]
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": undefined,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          Array [
            Object {
              "color": "white",
              "fontSize": 20,
            },
            Object {
              "color": "#fff",
            },
            Object {
              "fontSize": 17.5,
            },
            Object {
              "fontSize": 12,
            },
            undefined,
            Object {
              "fontWeight": "bold",
            },
            Object {
              "fontFamily": "HelveticaNeue",
            },
          ],
        ]
      }>
      Coming Soon...
    </Text>
  </View>
</View>
`;

exports[`test Large Button with Icon renders correctly 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
      },
      undefined,
    ]
  }
  testID={undefined}>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#9E9E9E",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginLeft": 15,
          "marginRight": 15,
          "padding": 19,
        },
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        Object {
          "backgroundColor": "#0E4EF8",
        },
        Object {
          "borderRadius": 2,
        },
        Object {
          "shadowColor": "rgba(0,0,0, .4)",
          "shadowOffset": Object {
            "height": 1,
            "width": 1,
          },
          "shadowOpacity": 1,
          "shadowRadius": 1,
        },
        Object {
          "padding": 12,
        },
        Object {
          "marginLeft": 0,
          "marginRight": 0,
          "padding": 15,
        },
        undefined,
      ]
    }>
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "white",
            "fontSize": 20,
          },
          Array [
            Object {
              "marginRight": 10,
            },
            undefined,
          ],
          Object {
            "fontFamily": "Material Icons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
        ]
      }>
      
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": undefined,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          Array [
            Object {
              "color": "white",
              "fontSize": 20,
            },
            Object {
              "color": "#fff",
            },
            Object {
              "fontSize": 17.5,
            },
            Object {
              "fontSize": 20,
            },
            undefined,
            Object {
              "fontWeight": "bold",
            },
            Object {
              "fontFamily": "HelveticaNeue",
            },
          ],
        ]
      }>
      Coming Soon...
    </Text>
  </View>
</View>
`;

exports[`test Outlined Button renders correctly 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
      },
      undefined,
    ]
  }
  testID={undefined}>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#9E9E9E",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginLeft": 15,
          "marginRight": 15,
          "padding": 19,
        },
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        Object {
          "backgroundColor": "transparent",
        },
        Object {
          "borderRadius": 2,
        },
        false,
        Object {
          "padding": 12,
        },
        Object {
          "borderColor": "#0E4EF8",
          "borderWidth": 1,
          "marginLeft": 0,
          "marginRight": 0,
          "padding": 12,
        },
        undefined,
      ]
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": undefined,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          Array [
            Object {
              "color": "white",
              "fontSize": 20,
            },
            Object {
              "color": "#0E4EF8",
            },
            Object {
              "fontSize": 17.5,
            },
            Object {
              "fontSize": 14,
            },
            undefined,
            Object {
              "fontWeight": "bold",
            },
            Object {
              "fontFamily": "HelveticaNeue",
            },
          ],
        ]
      }>
      Coming Soon...
    </Text>
  </View>
</View>
`;

exports[`test Outlined Button with Icon renders correctly 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
      },
      undefined,
    ]
  }
  testID={undefined}>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#9E9E9E",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginLeft": 15,
          "marginRight": 15,
          "padding": 19,
        },
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        Object {
          "backgroundColor": "transparent",
        },
        Object {
          "borderRadius": 2,
        },
        false,
        Object {
          "padding": 12,
        },
        Object {
          "borderColor": "#0E4EF8",
          "borderWidth": 1,
          "marginLeft": 0,
          "marginRight": 0,
          "padding": 12,
        },
        undefined,
      ]
    }>
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#0E4EF8",
            "fontSize": 14,
          },
          Array [
            Object {
              "marginRight": 10,
            },
            undefined,
          ],
          Object {
            "fontFamily": "Material Icons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
        ]
      }>
      
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": undefined,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          Array [
            Object {
              "color": "white",
              "fontSize": 20,
            },
            Object {
              "color": "#0E4EF8",
            },
            Object {
              "fontSize": 17.5,
            },
            Object {
              "fontSize": 14,
            },
            undefined,
            Object {
              "fontWeight": "bold",
            },
            Object {
              "fontFamily": "HelveticaNeue",
            },
          ],
        ]
      }>
      Coming Soon...
    </Text>
  </View>
</View>
`;

exports[`test Small Button renders correctly 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
      },
      undefined,
    ]
  }
  testID={undefined}>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#9E9E9E",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginLeft": 15,
          "marginRight": 15,
          "padding": 19,
        },
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        Object {
          "backgroundColor": "#0E4EF8",
        },
        Object {
          "borderRadius": 2,
        },
        Object {
          "shadowColor": "rgba(0,0,0, .4)",
          "shadowOffset": Object {
            "height": 1,
            "width": 1,
          },
          "shadowOpacity": 1,
          "shadowRadius": 1,
        },
        Object {
          "padding": 12,
        },
        Object {
          "marginLeft": 0,
          "marginRight": 0,
          "padding": 8,
        },
        undefined,
      ]
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": undefined,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          Array [
            Object {
              "color": "white",
              "fontSize": 20,
            },
            Object {
              "color": "#fff",
            },
            Object {
              "fontSize": 17.5,
            },
            Object {
              "fontSize": 12,
            },
            undefined,
            Object {
              "fontWeight": "bold",
            },
            Object {
              "fontFamily": "HelveticaNeue",
            },
          ],
        ]
      }>
      Coming Soon...
    </Text>
  </View>
</View>
`;

exports[`test Small Button with Icon renders correctly 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hitSlop={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
      },
      undefined,
    ]
  }
  testID={undefined}>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#9E9E9E",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginLeft": 15,
          "marginRight": 15,
          "padding": 19,
        },
        undefined,
        undefined,
        undefined,
        undefined,
        undefined,
        Object {
          "backgroundColor": "#0E4EF8",
        },
        Object {
          "borderRadius": 2,
        },
        Object {
          "shadowColor": "rgba(0,0,0, .4)",
          "shadowOffset": Object {
            "height": 1,
            "width": 1,
          },
          "shadowOpacity": 1,
          "shadowRadius": 1,
        },
        Object {
          "padding": 12,
        },
        Object {
          "marginLeft": 0,
          "marginRight": 0,
          "padding": 8,
        },
        undefined,
      ]
    }>
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "white",
            "fontSize": 14,
          },
          Array [
            Object {
              "marginRight": 10,
            },
            undefined,
          ],
          Object {
            "fontFamily": "Material Icons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
        ]
      }>
      
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": undefined,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          Array [
            Object {
              "color": "white",
              "fontSize": 20,
            },
            Object {
              "color": "#fff",
            },
            Object {
              "fontSize": 17.5,
            },
            Object {
              "fontSize": 12,
            },
            undefined,
            Object {
              "fontWeight": "bold",
            },
            Object {
              "fontFamily": "HelveticaNeue",
            },
          ],
        ]
      }>
      Coming Soon...
    </Text>
  </View>
</View>
`;
